--- a/scss/blocks/_our-clients.scss
+++ b/scss/blocks/_our-clients.scss
@@ -63,3 +63,21 @@
 .client-no-big-logo{
     max-width: 150px;
 }
+
+
+.client-logo{
+    max-width: 77px;
+    max-height: 77px;
+
+    @media (max-width: 768px) {
+        max-width: 50px;
+        max-height: 50px;
+    }
+}
+
+.client-logo-sup-small{
+    @media (max-width: 768px) {
+        max-width: 30px;
+        max-height: 30px;
+    }
+}
