--- a/scss/blocks/_services.scss
+++ b/scss/blocks/_services.scss
@@ -149,6 +149,7 @@
     @media (max-width:768px){
         margin-top: 32px;
     }
+    
 }
 .text--design {
     margin-top: 83px;
@@ -169,7 +170,7 @@
     }
 }
 
-@media (min-width:1400px) and (max-width:1500px) {
+@media (min-width:1450px) and (max-width:1500px) {
     .text--cyber {
         margin-top: 55px;
     }
@@ -178,6 +179,66 @@
     }
     .text--prod{
         margin-top: 140px;
+    }
+}
+@media (min-width:1300px) and (max-width:1450px) {
+    .text--cyber {
+        margin-top: 30px;
+        .main__text--item{
+            margin-top: 20px;
+            font-size: 18px;
+            line-height: 24px;
+        }
+    }
+    .text--design{
+        margin-top: 0px;
+        .main__text--item{
+            margin-top: 20px;
+            font-size: 18px;
+            line-height: 24px;
+        }
+    }
+    .text--prod{
+        margin-top: 90px;
+    }
+    .text--mahagement{
+        margin-top: 140px;
+    }
+}
+@media (min-width:1400px) and (max-width:1460px){
+    .text--cyber {
+        margin-top: 110px;
+        .main__text--item{
+            margin-top: 20px;
+            font-size: 17px;
+            line-height: 24px;
+        }
+    }
+    .text--design{
+        margin-top: 70px;
+        .main__text--item{
+            margin-top: 20px;
+            font-size: 18px;
+            line-height: 24px;
+        }
+    }
+    .text--prod{
+        margin-top: 135px;
+    }
+    .text--mahagement{
+        margin-top: 160px;
+    }
+}
+@media (min-width:1300px) and (max-width:1360px){
+    .text--cyber {
+        margin-top: 140px;
+        
+    }
+}
+@media (min-width:1100px) and (max-width:1300px){
+    .text--cyber {
+        margin-top: 30px;
+        
     }
 }
 // спец отступы для текста в карточках услуг**
