--- a/scss/blocks/_last-proj.scss
+++ b/scss/blocks/_last-proj.scss
@@ -234,15 +234,15 @@
     }
 }
 
-.box:hover .box__content{
-    transform: rotateY(-90deg) translateZ(-160px);
-    .slide-1{
-        opacity: 0;
-    }
-    .slide-2{
-        opacity: 1;
-    }
-}
+// .box:hover .box__content{
+//     transform: rotateY(-90deg) translateZ(-160px);
+//     .slide-1{
+//         opacity: 0;
+//     }
+//     .slide-2{
+//         opacity: 1;
+//     }
+// }
 
 
 
