--- a/scss/blocks/_team.scss
+++ b/scss/blocks/_team.scss
@@ -6,7 +6,7 @@
     gap: 70px;
     @media (min-width:1300px) {
         &:nth-child(2){
-            margin-top: -150px;
+            margin-top: -70px;
         }
         &:nth-child(3){
             margin-top: -150px;
@@ -44,6 +44,19 @@
         img{
             width: 100%;
         }
+    }
+}
+.team__item-1{
+    @media (max-width:768px){
+        width: 100%;
+        padding-left: 30px;
+        padding-right: 30px;
+    }
+}
+.team__item-2{
+    @media (max-width:768px){
+        padding-left: 30px;
+        padding-right: 30px;
     }
 }
 
