--- a/scss/blocks/_our-clients.scss
+++ b/scss/blocks/_our-clients.scss
@@ -1,10 +1,10 @@
 .our-clients__section {
     margin-top: 240px;
-    background-image: url('/img/back-light.png');
-    background-size: cover;
-    background-size: 100% 100%;
-    background-position: top -30px left 0px;
-    background-repeat: no-repeat;
+    // background-image: url('/img/back-light.png');
+    // background-size: cover;
+    // background-size: 100% 100%;
+    // background-position: top -30px left 0px;
+    // background-repeat: no-repeat;
     overflow: visible;
 }
 
