--- a/scss/blocks/_connect.scss
+++ b/scss/blocks/_connect.scss
@@ -9,8 +9,15 @@
     background-position: top -30px left 0px;
     background-repeat: no-repeat;
     overflow: visible;
+    @media (max-width:768px){
+        margin-top: 100px;
+    }
 }
-
+.connect__text{
+    @media (max-width:768px){
+        padding-left: 30px;
+    }
+}
 .connect__content {
     display: flex;
     align-items: center;
